--- a/frontend/finance-tracker/src/index.css
+++ b/frontend/finance-tracker/src/index.css
@@ -24,3 +24,11 @@
   }
 
 }
+.input-box {
+  @apply w-full flex justify-between gap-3 text-sm text-black bg-slate-100 rounded px-4 py-3 mb-4 mt-3 border border-slate-200 outline-none;
+}
+
+.btn-primary{
+  @apply w-full text-sm font-medium text-white bg-blue-500 shadow-lg  p-[10px] rounded-md my-1 hover:bg-blue-600 hover:text-blue-100;
+
+}
