--- a/frontend/finance-tracker/src/index.css
+++ b/frontend/finance-tracker/src/index.css
@@ -22,6 +22,12 @@
     margin: 0;
     min-height: 100vh;
   }
+  .fixed-sidebar {
+    position: fixed !important;
+    left: 0 !important;
+    margin-left: 0 !important;
+    box-sizing: border-box;
+  }
 
 }
 .input-box {
