--- a/frontend/finance-tracker/src/index.css
+++ b/frontend/finance-tracker/src/index.css
@@ -28,6 +28,7 @@
     margin-left: 0 !important;
     box-sizing: border-box;
   }
+  
 
 }
 .input-box {
@@ -37,4 +38,10 @@
 .btn-primary{
   @apply w-full text-sm font-medium text-white bg-blue-500 shadow-lg  p-[10px] rounded-md my-1 hover:bg-blue-600 hover:text-blue-100;
 
+}
+.card {
+  @apply bg-white p-6 rounded-2xl shadow-md shadow-gray-100 border border-gray-200/50;
+}
+.card-btn {
+  @apply flex items-center gap-3 text-[12px] font-medium text-gray-700 hover:text-purple-500 bg-gray-50 hover:bg-purple-50 px-4 py-1.5 rounded-lg border border-gray-200/50 cursor-pointer;
 }
